--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             
             <button id="find-me-btn">Find My Location</button>
-
+<div id="scrollable-area">
    <div id="filter-controls">
                 <strong>Filter by Category:</strong>
                 
@@ -69,7 +69,7 @@
 
             <ul id="traffic-light-list"></ul>
         </div>
-
+</div>
         <div id="map"></div>
 
     </div>
