--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <h2>
                 <img src="icon.png" alt="Traffic Light Icon" class="title-icon"> 
-                <span>Traffic Lights Locator</span>
+                <span>Traffic Lights Locator (BETA)</span>
             </h2>
 
             <div id="global-search-container">
@@ -83,3 +83,4 @@
 
 </body>
 </html>
+
